# gimp

./: .gitlab-ci.yml  meson.build
app/core/: gimplayer.c
app/pdb/: image-cmds.c
app/tools/: gimpfiltertool.c
plug-ins/python/: meson.build
plug-ins/python/tests/test-file-plug-ins/: README.md  batch-import-tests.py  gimptestframework.py  test-file-plug-ins.py
plug-ins/python/tests/test-file-plug-ins/tests/: batch-config.ini  bmp-tests.ini  bmpsuite-q-tests.files  config.ini  dcx-tests-1.files  dcx-tests.ini  dds-tests-2.files  dds-tests.files  dds-tests.ini  gif-pillow-tests.files  gif-tests.ini  jpeg-tests.ini  meson.build  pcx-tests-1.files  pcx-tests-2.files  pcx-tests.ini  png-suite-tests.files  png-tests.ini  pnm-tests-3.files  pnm-tests.ini  psb-tests.ini  psd-tests.ini  sgi-tests-3.files  sgi-tests.ini  tga-pillow-tests.files  tga-tests.ini  tif-tests.ini
themes/Default/: common.css
